--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -33,7 +33,8 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/user, roles: ROLE_USER }
+        - { path: ^/order, roles: ROLE_USER }
 
 when@test:
     security:
