+Création formulaire de contact+Dashboard pour Contact
J'ai mis en place le formulaire de contact de nos users au quelqu'un vient sur le site même pas inscrit peut au moins nous envoyer un mail pour des renseignements. Ce formulaire peut aussi nous servir comme route pour l'envoie des mails pour la confirmation de commandes clients ou de leurs refus. J'ai fait le Dashboard de ce dernier. => Voir plus .....""Code. Daouda

--- a/.env
+++ b/.env
@@ -35,5 +35,5 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/Transporteur?serverVersion=5.7&charse
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=null://null
 ###< symfony/mailer ###
