--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,10 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-
+    app.contact.email: 'daoudasouleymanecamara8@gmail.com'
+    app.contact.subject: 'contact form | message'
+    app.contact.adress: '22 Route du Rhin 67400 Illkirch || France'
+    app.contact.phone: '👉 0767438283'
 services:
     # default configuration for services in *this* file
     _defaults:
