--- a/.env
+++ b/.env
@@ -36,4 +36,6 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/Transporteur?serverVersion=5.7&charse
 
 ###> symfony/mailer ###
 MAILER_DSN=null://null
+# MAILER_DSN=smtp://c4140dee697743:8f3ceb218887f2@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+MAILER_DSN=smtp://3915756b9876ba:f6fff7b5980e3d@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
