+MAJ infos contact service.yaml
Hi, j'ai enlevé quelques infos perso pour mettre des infos fictifs. On ne sait jamais 😜😜😜😜😜

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,8 +6,8 @@
 parameters:
     app.contact.email: 'daoudasouleymanecamara8@gmail.com'
     app.contact.subject: 'contact form | message'
-    app.contact.adress: '22 Route du Rhin 67400 Illkirch || France'
-    app.contact.phone: '👉 0767438283'
+    app.contact.adress: '250 Route du Rhin 67400 Illkirch || France'
+    app.contact.phone: '👉 01.02.03.04.07'
 services:
     # default configuration for services in *this* file
     _defaults:
