--- a/package.json
+++ b/package.json
@@ -14,5 +14,15 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.5",
+        "bootstrap": "^5.1.3",
+        "bs-custom-file-input": "^1.3.4",
+        "guestbook": "^0.0.1-security",
+        "node-sass": "^7.0.1",
+        "sass": "^1.52.3",
+        "sass-loader": "^13.0.0",
+        "unzip": "^0.1.11"
     }
 }
