+Ajout de la récupéaration du mot de passe
Ajout de reset password
- service mailtrap car non en prod
- le destinataire aura un mail avec un lien pour réinitialiser son mot de passe.
=> Vu que nous sommes en local, il peut y avoir des soucis avec mailtrap.
Oui mailtrap c'est quoi ? c'est un site qui permet de tester certaines fonctionnalités de ton code avant la mise en circulation dans la masse........Il y a plusieurs langages qui utilise ce service. On peut aussi configurer gmail mais pas de temps de tout autoriser car gmail c'est la police de l'internet. 😁😁😁😁😁😁😁

--- a/.env
+++ b/.env
@@ -35,7 +35,6 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/Transporteur?serverVersion=5.7&charse
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=null://null
-# MAILER_DSN=smtp://c4140dee697743:8f3ceb218887f2@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
-MAILER_DSN=smtp://3915756b9876ba:f6fff7b5980e3d@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+#MAILER_DSN=null://null
+MAILER_DSN=smtp://53b9371ccfa522:68732aa1246b2c@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
