--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    app.contact.email: 'izydrive@gmail.com'
+    app.contact.email: 'daouda92.camara92@gmail.com'
     app.contact.subject: 'contact form | message'
     app.contact.adress: '250 Route du Rhin 67400 Illkirch || France'
     app.contact.phone: '👉 01.02.03.04.07'
