--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
         "symfony/webpack-encore-bundle": "^1.14",
         "symfony/yaml": "*",
         "symfonycasts/reset-password-bundle": "^1.13",
-        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/extra-bundle": "^3.4",
+        "twig/intl-extra": "^3.4",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
